// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing should maintain consistent UI structure across different alert variants: alert-default-variant 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Default Alert
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      This is a default alert message.
    </div>
  </div>
</div>
`;

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing should maintain consistent UI structure across different alert variants: alert-destructive-variant 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Destructive Alert
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      This is a destructive alert message.
    </div>
  </div>
</div>
`;

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing should maintain consistent UI structure with custom styling: alert-custom-styling 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-blue-50 border-blue-200 text-blue-800"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-4 w-4 text-blue-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <h5
      class="mb-1 font-medium leading-none tracking-tight text-blue-900"
    >
      Custom Alert
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed text-blue-700"
    >
      This is a custom styled alert.
    </div>
  </div>
</div>
`;

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing should maintain consistent UI structure with different content: alert-complex-content 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <h5
      class="mb-1 font-medium leading-none tracking-tight"
    >
      Complex Alert
    </h5>
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      <p>
        This alert contains complex content.
      </p>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;
